tests/paczka1/fuzzy1/60275694.err
Error in line 2: A420 A991 2,9
Error in line 3: A420 S227 2,8
Error in line 8: A420 A420 -3,2
Error in line 10: 5DqHp4OE S54 30,3
Error in line 19: 1QjfH2dc S227 7,7
Error in line 5: A420 A420 55,2
Error in line 24: A420 S54 41,3
Error in line 21: 1QjfH2dc S54 11,0
Error in line 16: VOyIr0X0rx S227 32,8
Error in line 22: faN A991 82,3
Error in line 30: VOyIr0X0rx S54 78,2
